k8s/ingress/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cew-ingress
spec:
  rules:
    - http:
        paths:
          - path: /calendarService
            pathType: Prefix
            backend:
              service:
                name: calendarService
                port:
                  number: 70002
          - path: /friendService
            pathType: Prefix
            backend:
              service:
                name: friendService
                port:
                  number: 70003
          - path: /userService
            pathType: Prefix
            backend:
              service:
                name: userService
                port:
                  number: 70001

  ingressClassName: nginx
